--- a/app/src/main/res/layout/activity_update_rider_details.xml
+++ b/app/src/main/res/layout/activity_update_rider_details.xml
@@ -170,6 +170,7 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
+        android:editable="false"
         android:inputType="none"
         android:paddingStart="20dp"
         android:textColor="#3F51B5"
