--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,7 +23,7 @@
             <item
                 android:id="@+id/nav_supplier_account"
                 android:icon="@drawable/ic_bike"
-                android:title="@string/menu_supplier" />
+                android:title="@string/supplier_login" />
         </menu>
     </item>
 
