--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,11 +6,6 @@
     app:startDestination="@id/nav_home">
 
     <fragment
-        android:id="@+id/nav_add_new_rider"
-        android:name="com.teamevox.freshfred.ui.addrider.AddNewRiderFragment"
-        android:label="@string/app_name"
-        tools:layout="@layout/fragment_add_new_rider" />
-    <fragment
         android:id="@+id/nav_home"
         android:name="com.teamevox.freshfred.ui.home.HomeFragment"
         android:label="@string/menu_home"
@@ -32,39 +27,19 @@
         android:label="activity_rider_login"
         tools:layout="@layout/activity_rider_login" />
     <activity
-        android:id="@+id/addNewSupplier"
-        android:name="com.teamevox.freshfred.AddNewSupplier"
-        android:label="activity_add_new_supplier"
-        tools:layout="@layout/activity_add_new_supplier" />
-    <activity
-        android:id="@+id/distributedOrders"
-        android:name="com.teamevox.freshfred.DistributedOrders"
-        android:label="activity_distributed_orders"
-        tools:layout="@layout/activity_distributed_orders" />
-    <activity
-        android:id="@+id/ordersForDistribution2"
-        android:name="com.teamevox.freshfred.OrdersForDistribution"
-        android:label="activity_orders_for_distribution"
-        tools:layout="@layout/activity_orders_for_distribution" />
-    <activity
         android:id="@+id/riderPortal"
         android:name="com.teamevox.freshfred.RiderPortal"
         android:label="activity_rider_portal"
         tools:layout="@layout/activity_rider_portal" />
     <activity
-        android:id="@+id/sampleOrdersForDistributing"
-        android:name="com.teamevox.freshfred.SampleOrdersForDistributing"
-        android:label="activity_sample_orders_for_distribuation"
-        tools:layout="@layout/activity_sample_orders_for_distribuation" />
-    <activity
-        android:id="@+id/supplierInterface"
-        android:name="com.teamevox.freshfred.SupplierInterface"
-        android:label="activity_supplier_interface"
-        tools:layout="@layout/activity_supplier_interface" />
-    <activity
         android:id="@+id/supplierLogin"
         android:name="com.teamevox.freshfred.SupplierLogin"
         android:label="activity_supplier_login"
         tools:layout="@layout/activity_supplier_login" />
+    <activity
+        android:id="@+id/ownerLogin"
+        android:name="com.teamevox.freshfred.OwnerLogin"
+        android:label="activity_owner_login"
+        tools:layout="@layout/activity_owner_login" />
 
 </navigation>
