--- a/app/src/main/res/layout/activity_supplier_interface.xml
+++ b/app/src/main/res/layout/activity_supplier_interface.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".SupplierInterface">
+    tools:context=".IT19216492.SupplierPortal">
 
     <TextView
         android:id="@+id/supplierName"
