--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,39 +7,35 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.teamevox.freshfred.ui.home.HomeFragment"
+        android:name="com.teamevox.freshfred.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_shop_home" />
 
-    <fragment
-        android:id="@+id/nav_add_food"
-        android:name="com.teamevox.freshfred.ui.addfood.AddFoodFragment"
-        android:label="@string/menu_add_food" />
-
-    <fragment
-        android:id="@+id/nav_request_supply"
-        android:name="com.teamevox.freshfred.ui.supply.RequestSupplyFragment"
-        android:label="@string/menu_request_supply" />
-
     <activity
         android:id="@+id/riderLogin"
-        android:name="com.teamevox.freshfred.RiderLogin"
+        android:name="com.teamevox.freshfred.IT19208718.RiderLogin"
         android:label="activity_rider_login"
         tools:layout="@layout/activity_rider_login" />
     <activity
         android:id="@+id/riderPortal"
-        android:name="com.teamevox.freshfred.RiderPortal"
+        android:name="com.teamevox.freshfred.IT19208718.RiderPortal"
         android:label="activity_rider_portal"
         tools:layout="@layout/activity_rider_portal" />
     <activity
         android:id="@+id/supplierLogin"
-        android:name="com.teamevox.freshfred.SupplierLogin"
+        android:name="com.teamevox.freshfred.IT19216492.SupplierLogin"
         android:label="activity_supplier_login"
         tools:layout="@layout/activity_supplier_login" />
     <activity
         android:id="@+id/ownerLogin"
-        android:name="com.teamevox.freshfred.OwnerLogin"
+        android:name="com.teamevox.freshfred.IT19208718.OwnerLogin"
         android:label="activity_owner_login"
         tools:layout="@layout/activity_owner_login" />
+    <activity
+        android:id="@+id/mainLogin"
+        android:name="com.teamevox.freshfred.IT19208718.MainLogin"
+        android:label="activity_main_login"
+        tools:layout="@layout/activity_main_login" />
+
 
 </navigation>
