--- a/app/src/main/res/layout/activity_add_new_supplier.xml
+++ b/app/src/main/res/layout/activity_add_new_supplier.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".AddNewSupplier">
+    tools:context=".IT19216492.AddNewSupplier">
 
     <TextView
         android:id="@+id/welcomeText"
