--- a/app/src/main/res/layout/activity_distributed_orders.xml
+++ b/app/src/main/res/layout/activity_distributed_orders.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DistributedOrders"
+    tools:context=".IT19208718.DistributedOrders"
     android:orientation="vertical"
     android:background="@drawable/bg" >
 
