--- a/app/src/main/res/layout/activity_rider_portal.xml
+++ b/app/src/main/res/layout/activity_rider_portal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RiderPortal"
+    tools:context=".IT19208718.RiderPortal"
     android:background="@drawable/bg">
 
 
