--- a/app/src/main/res/layout/activity_update_supplier_details.xml
+++ b/app/src/main/res/layout/activity_update_supplier_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".UpdateSupplierDetails">
+    tools:context=".IT19216492.UpdateSupplierDetails">
 
     <TextView
         android:id="@+id/welcomeTextUpdated"
