--- a/app/src/main/res/layout/activity_assigned_orders_for_riders.xml
+++ b/app/src/main/res/layout/activity_assigned_orders_for_riders.xml
@@ -4,16 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    tools:context=".IT19208718.AssignedOrdersForRiders"
+    android:background="@drawable/delivery_boy_order_list_bg">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="shop home"
+
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/assignedOrdersForMeRider"
+        android:layout_width="match_parent"
+        android:layout_height="431dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.026"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
