--- a/app/src/main/res/layout/activity_manage_riders.xml
+++ b/app/src/main/res/layout/activity_manage_riders.xml
@@ -5,20 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IT19208718.OrdersForDistribution"
+    tools:context=".IT19208718.ManageRiders"
     android:background="@drawable/delivery_boy_order_list_bg">
 
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/orderListRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="431dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
+        android:id="@+id/riderListRecyclerView"
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_marginTop="185dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.026"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
