--- a/app/src/main/res/layout/activity_owner_portal.xml
+++ b/app/src/main/res/layout/activity_owner_portal.xml
@@ -122,7 +122,7 @@
         app:layout_constraintVertical_bias="0.82" />
 
     <Button
-        android:id="@+id/hdf"
+        android:id="@+id/manageRiders"
         android:layout_width="150dp"
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
