--- a/app/src/main/res/layout/activity_rider_portal.xml
+++ b/app/src/main/res/layout/activity_rider_portal.xml
@@ -61,7 +61,21 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.717" />
+        app:layout_constraintVertical_bias="0.655" />
+
+    <Button
+        android:id="@+id/assignedOrdersForMe"
+        android:layout_width="220dp"
+        android:layout_height="40dp"
+        android:background="@drawable/rounded_edittext"
+        android:text="Assigned Orders For ME"
+        android:textColor="#0027FF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.838" />
 
     <Button
         android:id="@+id/MyAccountRiderButton"
@@ -75,7 +89,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.822" />
+        app:layout_constraintVertical_bias="0.746" />
 
     <Button
         android:id="@+id/riderLogOutButton"
@@ -92,17 +106,17 @@
         app:layout_constraintVertical_bias="0.928" />
 
     <Button
-        android:id="@+id/DailySalesReportButton"
+        android:id="@+id/earningHistory"
         android:layout_width="220dp"
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
-        android:text="@string/rider_profile_daily_sales_report"
+        android:text="Earning History"
         android:textColor="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.596" />
+        app:layout_constraintVertical_bias="0.57" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
