--- a/app/src/main/res/layout/single_distributed_order_by_rider.xml
+++ b/app/src/main/res/layout/single_distributed_order_by_rider.xml
@@ -8,7 +8,7 @@
     android:padding="15dp">
 
     <TextView
-        android:id="@+id/foodNameTXTOrderQueue"
+        android:id="@+id/distributedOrderByRiderFoodName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Food Name : "
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/foodPriceTXTOrderQueue"
+        android:id="@+id/distributedOrderByRiderTotalPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total Price : "
@@ -32,11 +32,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/foodNameTXTOrderQueue"
+        app:layout_constraintTop_toBottomOf="@+id/distributedOrderByRiderFoodName"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/addressTXTOrderQueue"
+        android:id="@+id/distributedOrderByRiderAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Address : "
@@ -46,11 +46,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/orderIDTXTOrderQueue"
+        app:layout_constraintTop_toBottomOf="@+id/distributedOrderByRiderOrderId"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/orderIDTXTOrderQueue"
+        android:id="@+id/distributedOrderByRiderOrderId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Order ID : "
@@ -60,11 +60,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/customerMobileTXTOrderQueue"
+        app:layout_constraintTop_toBottomOf="@+id/distributedOrderByRiderCustomerMobile"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/customerMobileTXTOrderQueue"
+        android:id="@+id/distributedOrderByRiderCustomerMobile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Customer Mobile : "
@@ -74,11 +74,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/customerNameTXTOrderQueue"
+        app:layout_constraintTop_toBottomOf="@+id/distributedOrderByRiderCustomerName"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/customerNameTXTOrderQueue"
+        android:id="@+id/distributedOrderByRiderCustomerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Customer Name : "
@@ -88,11 +88,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/foodPriceTXTOrderQueue"
+        app:layout_constraintTop_toBottomOf="@+id/distributedOrderByRiderTotalPrice"
         app:layout_constraintVertical_bias="0.03" />
 
     <ImageView
-        android:id="@+id/assignThisOrderForMe"
+        android:id="@+id/deleteThisOrderFromHistoryNow"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,20 +101,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.34"
-        app:srcCompat="@drawable/i_will_deliver" />
+        app:srcCompat="@drawable/delete_completed_orders_by_rider" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Assign for me"
         android:fontFamily="@font/amarante"
+        android:text="Delete From History"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.944"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.74" />
+        app:layout_constraintVertical_bias="0.795" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
