IT19208718 successfully integrated 3 functions (food add, customer registration, login, rider function)

--- a/app/src/main/res/layout/activity_add_new_rider.xml
+++ b/app/src/main/res/layout/activity_add_new_rider.xml
@@ -17,6 +17,7 @@
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
         android:textColor="#B53F3F"
+        android:fontFamily="@font/amarante"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,6 +36,7 @@
         android:hint="@string/rider_bike_number"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:fontFamily="@font/amarante"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -54,6 +56,7 @@
         android:hint="@string/rider_name"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:fontFamily="@font/amarante"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -73,6 +76,7 @@
         android:hint="@string/rider_commission"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:fontFamily="@font/amarante"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -92,6 +96,7 @@
         android:hint="@string/rider_nic"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:fontFamily="@font/amarante"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -111,6 +116,7 @@
         android:hint="@string/rider_mobile_number"
         android:inputType="textPersonName"
         android:paddingLeft="20dp"
+        android:fontFamily="@font/amarante"
         android:textColor="#3F51B5"
         android:textColorHighlight="#FFFFFF"
         android:textColorHint="#0027FF"
@@ -128,6 +134,7 @@
         android:layout_height="40dp"
         android:background="@drawable/rounded_edittext"
         android:text="@string/rider_btn"
+        android:fontFamily="@font/amarante"
         android:textColor="#0027FF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
