--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.IT19213972.FoodDetails">
+    tools:context=".IT19213972.FoodDetails">
 
     <ImageView
         android:id="@+id/food_image_details"
